# pipey

./: README.md  benchmark_pipeline.py  example.py  pipey.py  pyproject.toml  test_pipeline.py  test_pipey_unit.py  test_windowed_unit.py  windowed.py
benchmarks/: benchmark_pipeline.py
examples/: example.py
src/pipey/: __init__.py  pipeline.py
tests/: conftest.py  test_windowed_unit.py
